--- a/todo.html
+++ b/todo.html
@@ -76,7 +76,7 @@
     <div class="flex flex-col w-1/4">
       <div class="bg-violet-300 p-1">
         <div class="flex items-center">
-          <h2  class="border-r-2 p-1 font-semibold">TO-DO</h2>
+          <h2 class="border-r-2 p-1 font-semibold">TO-DO</h2>
           <h2 class="mr-2 font-semibold p-1">0</h2>
         </div>
       </div>
@@ -101,11 +101,13 @@
           <h2 class="mr-2 font-semibold p-1">0</h2>
         </div>
       </div>
-      <div id="Done" class="bg-violet-700 h-48 overflow-y-scroll"></div>
+      <div id="Done" class="bg-violet-700 h-48 overflow-y-scroll">g</div>
     </div>
   </div>
+  
+  
 
-  <script src="todo.js"></script>
+    <script src="todo.js"></script>
 </body>
 
 </html>
